[project]
name = "gridboss-api"
version = "0.1.0"
description = "Backend services for the GridBoss platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "S",
  "SIM",
  "ASYNC",
  "PL",
  "RUF",
]
ignore = ["E203", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]